--- a/style.css
+++ b/style.css
@@ -1,71 +1,112 @@
-.penisKuk {
-  margin-top:50px;
- 
-}
-.testikel {
-  background-color:brown;
-  height:75px;
-  width:75px;
-  border-radius:50px;
- 
-  position:absolute;
-}
-.ett {
-  margin-top:56px;
-}
-.två {
-  left:60px;
-  opacity:0.9;
-  margin-top:56px;
+@import 'https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i';
+
+body,
+html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+    background-color: white;
+    overflow: hidden;
 }
 
-.penis {
-  position:absolute;
-  width: 250px;
-  left:30px;
-  
-  }
-.ollon {
-  margin-top:-12px;
-  left: 220px;
-  width:100px;
-  height:100px;
-  background-color: purple;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+li {
+    margin: 0;
+    padding: 0;
 }
 
-.ollon p {
-  position:absolute;
-  font-size:56px;
-  left:84px;
-  bottom: -34px;
+#container {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    float: left;
+    opacity: 1;
 }
 
-.skinka {
-  width:200px;
-  height:200px;
-  border-radius:100px;
-  background-color: #D49A6A;
-  position:relative;
-  left:400px;
-}
-.ette {
-  z-index:-9990;
-  bottom:40px;
-}
-.tve {
-  bottom:250px;
-  left:423px;
-  background-color:#804515;
+#container-bg {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    z-index: 0;
 }
 
-@keyframes pök {
-  50% {
-    transform:translateX(200px);
-    
-  }
+.bg {
+    width: 50%;
+    height: 100%;
+    position: relative;
+    float: left;
 }
-.snoppe {
-  animation-name:pök;
-  animation-duration:3s;
-  animation-iteration-count: infinite;
+
+.black {
+    background-color: black;
+}
+
+.white {
+    background-color: white;
+}
+
+#c-container {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#c {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#ideas {
+    width: 100vw;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    z-index: 10;
+}
+
+.idea {
+    width: 50%;
+    height: 100%;
+    position: relative;
+    float: left;
+}
+
+.idea-text {
+    width: calc(100% - 20px);
+    height: 100%;
+    font-family: 'Lato', sans-serif;
+    font-size: 70px;
+    padding: 0 10px;
+    font-weight: 600;
+    line-height: 1em;
+    position: relative;
+    float: left;
+}
+
+/*GREAT IDEAS BURN*/
+#idea-text-left {
+    color: white;
+    text-align: right;
+    text-shadow: 0px 0px 20px rgba(0,0,0,0.5)
+}
+
+/*FUEL*/
+#idea-text-right {
+    color: black;
+    text-align: left;
+    margin-top: 2em;
 }
