--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{ margin:0;}
     width: inherit;
     height: inherit;
     -o-filter: blur(15px);
-    filter: blur(15px);
+    filter: blur(6px) brightness(50%);
     object-fit: cover;
     transform: scale(1.04);
 }
